--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "annyang": "^2.6.1",
     "bootstrap": "^5.3.1",
     "next": "13.4.12",
     "next-auth": "^4.24.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0"
   }
 }
